# Legacy

./: .gitignore  .gitmodules  README.md
CMake/: CMakeLists.txt  README.md
CMake/Level0/: CMakeLists.txt  README.md  main.cpp
CMake/Level1/: CMakeLists.txt  README.md  adder.h
CMake/Level1/test1/: CMakeLists.txt  main.cpp
CMake/Level2/: CMakeLists.txt  README.md  build.sh  configure.sh  install.sh  main.cpp  run.sh  shodowConfig.h.in
CMake/Level2/Adder/: CMakeLists.txt  adder.cpp
Fractals/BurningShip/: main.cpp  run  run.sh  shader.fs
Fractals/Mandlebrot/: Shader.hpp  main.cpp  run  shader.fs
Fractals/glad/: glad.c
OpenGL/: HelloTriangle.cpp  HelloWindow.cpp  README.md  Shaders.cpp  Shaders1.cpp  Shaders2.cpp  run  run.sh  shaders.hpp
OpenGL/Camera/: camera.cpp  run
OpenGL/Lighting/: 1.color.fs  1.color.vs  camera.hpp  lighting.cpp  run
OpenGL/ShadersHomework/: hw1.cpp  hwshaders.hpp  shader.fs  shader.vs
OpenGL/Textures/: run  shader.fs  textures.cpp
OpenGL/glad/: README.md  glad.h
Playground/: playground  playground.cpp  run.sh
mandelbrot/: README.md  mandelbrot.py
